--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,11 @@ spring.devtools.livereload.enabled=false
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#add
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+#archivos sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.schema-locations=classpath:schema.sql
 
 #Puerto del servidor Tomcat
 server.port=8181
